--- a/index.html
+++ b/index.html
@@ -1711,7 +1711,7 @@
                 <div class="program-content">
                     <h4>Conference Program Schedule</h4>
                     <p>Download the complete tentative program schedule including session timings, presentation slots, and keynote speeches.</p>
-                    <a href="YOUR_URL_HERE" 
+                    <a href="https://drive.google.com/file/d/1UUAAtTq-HynQ0BhD1eM-wCRVjzZuMK3g/view?usp=sharing" 
                        target="_blank" 
                        class="program-download-btn">
                         <i class="fas fa-download"></i> Download Program Booklet
@@ -1726,7 +1726,7 @@
                 <div class="program-content">
                     <h4>Day 1: September 22, 2026</h4>
                     <p>Opening ceremony, keynote speeches, parallel sessions, and networking events.</p>
-                    <a href="YOUR_DAY1_URL_HERE" 
+                    <a href="https://drive.google.com/file/d/1UUAAtTq-HynQ0BhD1eM-wCRVjzZuMK3g/view?usp=sharing" 
                        target="_blank" 
                        class="program-download-btn secondary">
                         <i class="fas fa-file-pdf"></i> Day 1 Schedule
@@ -1741,7 +1741,7 @@
                 <div class="program-content">
                     <h4>Day 2: September 23, 2026</h4>
                     <p>Research presentations, workshops, closing ceremony, and awards.</p>
-                    <a href="YOUR_DAY2_URL_HERE" 
+                    <a href="https://drive.google.com/file/d/1UUAAtTq-HynQ0BhD1eM-wCRVjzZuMK3g/view?usp=sharing" 
                        target="_blank" 
                        class="program-download-btn secondary">
                         <i class="fas fa-file-pdf"></i> Day 2 Schedule
@@ -1931,7 +1931,7 @@
                     <a href="https://wa.me/60123456789?text=Hello%20AHP%20Conference%20Team,%20I%20have%20a%20question%20about%20the%20conference" 
                        target="_blank" 
                        class="whatsapp-btn">
-                        <i class="fab fa-whatsapp"></i> +60 12-345 6789
+                        <i class="fab fa-whatsapp"></i> click me
                     </a>
                 </div>
                 <div class="whatsapp-contact">
@@ -1942,7 +1942,7 @@
                     <a href="https://wa.link/98umws" 
                        target="_blank" 
                        class="whatsapp-btn">
-                        <i class="fab fa-whatsapp"></i> +60 12-987 6543
+                        <i class="fab fa-whatsapp"></i> click me
                     </a>
                 </div>
             </div>
