--- a/index.html
+++ b/index.html
@@ -1637,7 +1637,8 @@
                 SCIENTIFIC CONFERENCE
             </div>
             <div class="hero-subtitle" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
-                Empowering Allied Health Professional: Leading Change for Better Health Outcomes
+                Empowering Allied Health Professional:<br>
+                Leading Change for Better Health Outcomes
             </div>
             <div class="hero-date" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
                 <i class="fas fa-calendar-alt"></i> September 22-23, 2026
@@ -1675,7 +1676,7 @@
             </div>
         </div>
         <div class="countdown-note" data-aos="fade-up" data-aos-delay="400">
-            Mark your calendar for the premier Allied Health event in Terengganu
+            Mark your calendar and welcome to Terengganu Darul Iman
         </div>
         <!-- CONFERENCE DATE WITH CALENDAR LINK -->
         <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=2nd%20Terengganu%20AHP%20Scientific%20Conference&dates=20260922T090000/20260923T170000&details=2nd%20Terengganu%20Allied%20Health%20Professional%20Scientific%20Conference%20at%20Ar-Riyadah%20Residence%2C%20Kuala%20Nerus%2C%20Terengganu.%20Theme%3A%20Empowering%20Allied%20Health%20Professional%3A%20Leading%20Change%20for%20Better%20Health%20Outcomes&location=Ar-Riyadah%20Residence%2C%20Kuala%20Nerus%2C%20Terengganu%2C%20Malaysia&sf=true&output=xml" 
@@ -1750,7 +1751,7 @@
             <div class="speaker-box" data-aos="fade-up" data-aos-delay="200">
                 <img src="images/speaker1.jpg" alt="Speaker 1">
                 <h4>Prof. Dr. Syed Hatim Noor</h4>
-                <div class="speaker-title">Professor of Medical Statistics</div>
+                <div class="speaker-title">Professor of Biomedical Statistics</div>
                 <p class="speaker-topic">Topic: Advanced Statistical Methods in Healthcare Research</p>
             </div>
             <div class="speaker-box" data-aos="fade-up" data-aos-delay="400">
@@ -1761,8 +1762,8 @@
             </div>
             <div class="speaker-box" data-aos="fade-up" data-aos-delay="600">
                 <img src="images/speaker3.jpg" alt="Speaker 3">
-                <h4>Dr. Sarah Johnson</h4>
-                <div class="speaker-title">Healthcare Policy Expert</div>
+                <h4>Dr. Nasuha Yaacob</h4>
+                <div class="speaker-title">Obstetrics * Gynaecology Specialist</div>
                 <p class="speaker-topic">Topic: Future Trends in Allied Health Practice</p>
             </div>
         </div>
@@ -1846,7 +1847,7 @@
         <div class="whatsapp-container" style="max-width: 600px;" data-aos="fade-up" data-aos-delay="200">
             <div class="whatsapp-contact">
                 <div class="contact-info-whatsapp">
-                    <h3>Become a PASKBT Member</h3>
+                    <h3>Become a Persatuan Ahli Sains Kesihatan Bersekutu(PASKBT) Member</h3>
                     <p>Click below to inquire about PASKBT membership benefits and application process</p>
                 </div>
                 <a href="https://wa.me/60123456789?text=Hello%20PASKBT,%20I%20would%20like%20to%20inquire%20about%20membership%20registration" 
@@ -1875,7 +1876,7 @@
                     <div class="calendar-tooltip">Click to set reminder</div>
                 </div>
                 <div class="timeline-content">
-                    <p>Abstract & e-Poster Submission opens</p>
+                    <p>Registration opens</p>
                 </div>
             </div>
             <div class="timeline-item" data-aos="fade-up" data-aos-delay="300">
@@ -1890,7 +1891,7 @@
                     <div class="calendar-tooltip">Click to set reminder</div>
                 </div>
                 <div class="timeline-content">
-                    <p>Registration opens</p>
+                    <p>Abstract & e-Poster Submission opens</p>
                 </div>
             </div>
             <div class="timeline-item" data-aos="fade-up" data-aos-delay="400">
